# onboarding

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
docs/: analytics.mdx  designer.mdx  embedding.mdx  getting-started.mdx  index.mdx  list-projects.mdx
projects/backend/: .dockerignore
projects/backend/board-api/: README.md  pyproject.toml
projects/backend/board-api/clickhouse/: init.sh
projects/backend/board-api/docker/: Dockerfile  docker-entrypoint.sh
projects/backend/board-api/src/board_api/: api.py  config.py  main.py
projects/backend/board-api/src/board_api/board_sync/: __init__.py  deps.py  repository.py  router.py  service.py  utils.py
projects/backend/board-api/src/board_api/database/: __init__.py  core.py  queries.py  tables.py
projects/backend/board-api/src/board_api/events/: __init__.py  repository.py
projects/backend/board-api/src/board_api/storage/: __init__.py  s3_client.py
projects/backend/onboarding-api/: README.md  alembic.ini  pyproject.toml
projects/backend/onboarding-api/alembic/: env.py
projects/backend/onboarding-api/alembic/versions/: 2024-10-13_initial_database.py
projects/backend/onboarding-api/docker/: Dockerfile  docker-entrypoint.sh
projects/backend/onboarding-api/src/onboarding_api/: api.py  config.py  main.py  routers.py  utils.py
projects/backend/onboarding-api/src/onboarding_api/analytics/: README.md  __init__.py  client.py  repository.py  router.py  service.py
projects/backend/onboarding-api/src/onboarding_api/blobs/: repository.py
projects/backend/onboarding-api/src/onboarding_api/board_steps/: __init__.py  repository.py  router.py  service.py
projects/backend/onboarding-api/src/onboarding_api/boards/: __init__.py  repository.py  router.py  service.py
projects/backend/onboarding-api/src/onboarding_api/database/: __init__.py  core.py  queries.py  tables.py
projects/backend/onboarding-api/src/onboarding_api/iam/: __init__.py  data.py  deps.py
projects/backend/onboarding-api/src/onboarding_api/storage/: __init__.py  s3_client.py
projects/backend/onboarding-shared/: README.md  pyproject.toml
projects/backend/onboarding-shared/src/onboarding_shared/exceptions/: __init__.py  api_error.py
projects/backend/onboarding-shared/src/onboarding_shared/schemas/: protocol.py
projects/backend/onboarding-shared/src/onboarding_shared/utils/: __init__.py  common.py  s3.py  schema.py
projects/frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.ts
