[tool.poetry]
name = "onboarding-api"
version = "0.0.1"
description = ""
authors = ["Mikhail Egorov <mikhailegorov_dev@outlook.com>"]
readme = "README.md"
packages = [{include = "onboarding_api", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
onboarding-shared = {path = "../onboarding-shared", develop = false}
fastapi = "^0.115.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
databases = "^0.9.0"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
uvicorn = "^0.31.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
