[tool.poetry]
name = "onboarding-shared"
version = "0.0.1"
description = ""
authors = ["Mikhail Egorov <mikhailegorov_dev@outlook.com>"]
readme = "README.md"
packages = [{include = "onboarding_shared", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
